Include PDO via composer and use type hinting

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "slim/slim": "^3.0",
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
